# MCs_Transitorios_AIoT

./: README.md
CrowPanel_Display/: Prompt Maestro + Esclavo.docx  ~$ompt Maestro + Esclavo.docx
CrowPanel_Display/Transitorios_AIoT-IDF/: SistemaArchivos.txt  Transitorios_AIoT-IDF.eez-project  sdkconfig  sdkconfig.defaults
CrowPanel_Display/Transitorios_AIoT-IDF/components/Bluetooth_AIoT/: CMakeLists.txt
CrowPanel_Display/Transitorios_AIoT-IDF/components/Configuracion_AIoT/: CMakeLists.txt
CrowPanel_Display/Transitorios_AIoT-IDF/components/Configuracion_AIoT/include/: Configuracion_AIoT.h  Display_AIoT.h  System_Defines_AIoT.h
CrowPanel_Display/Transitorios_AIoT-IDF/components/Configuracion_AIoT/src/: Configuracion_AIoT.c  Display_AIoT.c  Input_AIoT.c  xpt2046_lvgl9.c
CrowPanel_Display/Transitorios_AIoT-IDF/components/EEZ_AIoT/: CMakeLists.txt
CrowPanel_Display/Transitorios_AIoT-IDF/components/EEZ_AIoT/src/: actions.cpp  vars.cpp
CrowPanel_Display/Transitorios_AIoT-IDF/components/EEZ_AIoT/ui/: actions.h  screens.c  screens.h  ui.c  vars.h
CrowPanel_Display/Transitorios_AIoT-IDF/components/bsp_display/: CMakeLists.txt  idf_component.yml
CrowPanel_Display/Transitorios_AIoT-IDF/components/io_services/: CMakeLists.txt
CrowPanel_Display/Transitorios_AIoT-IDF/components/ui/: CMakeLists.txt  actions.cpp  actions.h  eez-flow.cpp  ui.c  vars.cpp
CrowPanel_Display/Transitorios_AIoT-IDF/components/wifi_manager/: CMakeLists.txt  wifi_manager.c
CrowPanel_Display/Transitorios_AIoT-IDF/main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp  main_AIoT.c
CrowPanel_Display/Transitorios_AIoT-IDF_(20251212_0040)/: .gitignore  CMakeLists.txt  SistemaDeArchivos.txt  Transitorios_AIoT-IDF.eez-project
CrowPanel_Display/Transitorios_AIoT-IDF_(20251212_0040)/components/ui/: actions.cpp  screens.c  screens.h  ui.c  ui.h  vars.h
CrowPanel_Display/Transitorios_AIoT-IDF_(20251212_0040)/main/: main_AIoT.c
CrowPanel_Display/Transitorios_AIoT-IDF_v(Roca)/: CMakeLists.txt
CrowPanel_Display/Transitorios_AIoT-IDF_v(Roca)/components/ui/: CMakeLists.txt  screens.h
CrowPanel_Display/Transitorios_AIoT-IDF_v(Roca)/main/: main_AIoT.c
CrowPanel_Display/Transitorios_AIoT-IDF_v2/components/WiFi_AIoT/: CMakeLists.txt
CrowPanel_Display/Transitorios_AIoT-IDF_v2/components/ui/: CMakeLists.txt  screens.c  ui.c
CrowPanel_Display/Transitorios_AIoT-IDF_v3/: Transitorios_AIoT-IDF.eez-project
CrowPanel_Display/Transitorios_AIoT-IDF_v3/components/ui/: vars.h
CrowPanel_Display/Transitorios_AIoT-IDF_v3/main/: CMakeLists.txt  main_AIoT.c
CrowPanel_Display/Transitorios_AIoT-v1/: .gitignore  SistemaArchivos.txt  Transitorios_AIoT-v1.eez-project  platformio.ini
CrowPanel_Display/Transitorios_AIoT-v1/lib/ScanWiFi_AIoT/: ScanWiFi_AIoT.h  library.properties
CrowPanel_Display/Transitorios_AIoT-v1/lib/Servicios_AIoT/: library.json
CrowPanel_Display/Transitorios_AIoT-v1/lib/UARTn_AIoT/: UARTn_AIoT.h
CrowPanel_Display/Transitorios_AIoT-v1/src/: lv_conf.h  main.cpp
CrowPanel_Display/components/Bluetooth_AIoT/: CMakeLists.txt
ESP32-S3/Transitorios_AIoT_ESP32-S3/: CMakeLists.txt  sdkconfig.defaults
ESP32-S3/Transitorios_AIoT_ESP32-S3/main/: CMakeLists.txt  idf_component.yml
ESP32/Transitorios_AIoT/: platformio.ini
ESP32/Transitorios_AIoT/include/: config.h
(+38 files in other folders)
